namespace SokoHub.Domain.Modules.Shipping;

public class ShipmentItem
{
}
