namespace SokoHub.Domain.Modules.Shipping;

public class ShippingAddress
{
}
